* release 0.2.6
	- added initial code for menu
	- fixed skull animation in 'rock' screen 18

* release 0.2.5
	- fixed spiders and worms movement
	- several fixes for big endian platforms

* release 0.2.4
	- fixed Amigo walk path in 'pwr2' screen 7
	- fixed glowing stone puzzle in 'lar2'
	- fixed missing trigger for switch #0 in 'lar1'

* release 0.2.3
	- fixed double spectre fireball animations in 'lar1' and 'lar2'
	- fixed level transition from 'pwr1' to 'isld'
	- fixed screen state for 'lava' screen 15

* release 0.2.2
	- fixed lever in 'lava' level screen 2
	- fixed masking with plants in 'pwr1' level
	- fixed missing explosion animation with fireballs
	- fixed screen mask in 'lar2' level screen 7

* release 0.2.1
	- added initial code for PSX data files detection
	- fixed sprite infinite looping in 'pwr1' level screen 23
	- several fixes to gates and switches in 'lar1' and 'lar2' levels

* release 0.2.0
	- added missing postScreenUpdate callbacks for 'lava' level
	- fixed crash at beginning of 'lar1' level
	- fixed gamma ramp with widescreen borders
	- several fixes to gates handling in 'lar1' and 'lar2' levels

* release 0.1.9
	- fixed fireballs not hitting Andy
	- fixed fishes movement in 'pwr1' and 'pwr2' levels
	- fixed several bounding box clipping checks
	- fixed sounds panning

* release 0.1.8
	- added specific callbacks for 'lar1' and 'lar2' levels
	- fixed infinite loop in .mst op27
	- several fixes to sound code

* release 0.1.7
	- added 16:9 widescreen (blur)
	- added missing preScreenUpdate callbacks for 'lar1' level
	- fixed .sss version 12 loading (demo v1.4)

* release 0.1.6
	- fixed Andy animation glitches when climbing
	- fixed Andy apnea animation in 'pwr1' level
	- fixed duplicated cutscene playback when switching levels
	- fixed postScreenUpdate callback for 'isld' level screen 15
	- fixed postScreenUpdate callback for 'pwr1' level screen 6

* release 0.1.5
	- added 'firefly' object in 'fort' level
	- added collision with monsters