@@ -1058,14 +1058,51 @@ void Resource::checkSssCode(const uint8_t *buf, int size) const {
 	assert(offset == size);
 }
 
+static int8_t sext8(uint8_t x, int bits) {
+	const int shift = 8 - bits;
+	return ((int8_t)(x << shift)) >> shift;
+}
+
+static int _pcmL1, _pcmL0;
+
+static void decodeSssSpuAdpcmUnit(const uint8_t *src, int16_t *dst) { // src: 16bytes, dst: 56bytes
+	static const int16_t K0_1024[] = { 0, 960, 1840, 1568, 1952 };
+	static const int16_t K1_1024[] = { 0,   0, -832, -880, -960 };
+	const uint8_t param = *src++;
+	const int shift = 12 - (param & 15);
+	assert(shift >= 0);
+	const int filter = param >> 4;
+	assert(filter < 5);
+	const int flag = *src++;
+	assert(flag < 7);
+	for (int i = 0; i < 14; ++i) {
+		const uint8_t b = *src++;
+		const int t1 = sext8(b & 15, 4);
+		const int s1 = (t1 << shift) + ((_pcmL0 * K0_1024[filter] + _pcmL1 * K1_1024[filter] + 512) >> 10);
+		_pcmL1 = _pcmL0;
+		_pcmL0 = s1;
+		*dst++ = CLIP(_pcmL0, -32768, 32767);
+		const int t2 = sext8(b >> 4, 4);
+		const int s2 = (t2 << shift) + ((_pcmL0 * K0_1024[filter] + _pcmL1 * K1_1024[filter] + 512) >> 10);
+		_pcmL1 = _pcmL0;
+		_pcmL0 = s2;
+		*dst++ = CLIP(_pcmL0, -32768, 32767);
+	}
+}
+
 uint32_t Resource::getSssPcmSize(const SssPcm *pcm) const {
+	if (_isPsx) {
+		assert(pcm->strideSize == 512);
+		const uint32_t size = pcm->strideCount * 512;
+		return (size / 16) * 28 * sizeof(int16_t);
+	}
 	return (pcm->strideSize - 256 * sizeof(int16_t)) * pcm->strideCount * sizeof(int16_t);
 }
 
 void Resource::loadSssPcm(File *fp, SssPcm *pcm) {
 	assert(!pcm->ptr);
-	const uint32_t decompressedSize = getSssPcmSize(pcm);
-	if (decompressedSize != 0) {
+	if (pcm->totalSize != 0) {
+		const uint32_t decompressedSize = getSssPcmSize(pcm);
 		debug(kDebug_SOUND, "Loading PCM %p decompressedSize %d", pcm, decompressedSize);
 		int16_t *p = (int16_t *)malloc(decompressedSize);
 		if (!p) {
@@ -1073,6 +1110,18 @@ void Resource::loadSssPcm(File *fp, SssPcm *pcm) {
 			return;
 		}
 		pcm->ptr = p;
+		if (_isPsx) { // 11025 hz
+			for (int i = 0; i < pcm->strideCount; ++i) {
+				uint8_t buf[512];
+				fp->read(buf, sizeof(buf));
+				_pcmL1 = _pcmL0 = 0;
+				for (int j = 0; j < 512; j += 16) {
+					decodeSssSpuAdpcmUnit(buf + j, p);
+					p += 28;
+				}
+			}
+			return;
+		}
 		if (fp != _datFile || pcm == &_sssPcmTable[0]) {
 			fp->seek(pcm->offset, SEEK_SET);
 		}
@@ -1111,13 +1160,20 @@ void Resource::resetSssFilters() {
 }
 
 void Resource::preloadSssPcmList(const SssPreloadInfoData *preloadInfoData) {
+	File *fp = _sssFile;
+	if (_isPsx) {
+		_lvlFile->seek(preloadInfoData->pcmBlockOffset * 2048, SEEK_SET);
+		fp = _lvlFile;
+	}
 	const uint8_t num = preloadInfoData->preload1Index;
 	const SssPreloadList *preloadList = &_sssPreload1Table[num];
 	const bool is16Bits = (_sssHdr.version == 12);
 	for (int i = 0; i < preloadList->count; ++i) {
 		const int num = is16Bits ? READ_LE_UINT16(preloadList->ptr + i * 2) : preloadList->ptr[i];
 		if (!_sssPcmTable[num].ptr) {
-			loadSssPcm(_sssFile, &_sssPcmTable[num]);
+			loadSssPcm(fp, &_sssPcmTable[num]);
+		} else if (_isPsx) {
+			fp->seek(_sssPcmTable[num].strideCount * 512, SEEK_CUR);
 		}
 	}
 }
