@@ -1,5 +1,6 @@
 * release 0.2.6
 	- added initial code for menu
+	- added initial code for PSX sounds (SPU ADPCM)
 	- fixed skull animation in 'rock' screen 18
 
 * release 0.2.5
